GNOME Bugzilla – Bug 684568
codecparsers: h264: fix error code for invalid size parsed in SPS
Last modified: 2012-11-19 12:54:55 UTC
Created attachment 224940 [details] [review] codecparsers: h264: fix error code for invalid size parsed in SPS Hi, gst_h264_parse_sps() returned FALSE if it parsed invalid (negative) size components. Now make it gracefully return GST_H264_PARSER_ERROR instead of GST_H264_PARSER_OK (FALSE). Not that I really tested it, just noticed the bug when factor it code for implementing subset_seq_parameter_set_rbsp().
Makes sense. Have you had a chance to test this patch yet? (I'm guessing you might have been using it for a while now?)
Yes, I have been using it for a while now, but so far, I still haven't got by a stream presenting this kind of issue: one of the dimension is negative. Though, the patch looks trivial enough. :)
Yeah sorry, it was just the 'I haven't tested it' disclaimer that put me off at the time, these little things can sometimes have unexpected side effects :) commit c951d201ec88696157c7a5ad2de27e1b73b01e04 Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com> Date: Fri Sep 21 18:23:21 2012 +0200 codecparsers: h264: fix error code for invalid size parsed in SPS. gst_h264_parse_sps() returned FALSE if it parsed invalid (negative) size components. Now make it gracefully return GST_H264_PARSER_ERROR instead of GST_H264_PARSER_OK (FALSE). https://bugzilla.gnome.org/show_bug.cgi?id=684568